2007-08-21  Stef Walter  <stef@memberwebs.com>

    * src/seahorse-gkeyring-item.c: Properly escape any markup characters in 
    a gnome-keyring item name. Fixes bug #453188
    
2007-08-21  Stef Walter  <stef@memberwebs.com>

    * src/seahorse-key-properties.c: Remove assertions in UI code that we 
    really don't guarantee. Fixes bug #453152

2007-08-20  Stef Walter  <stef@memberwebs.com>

    * libseahorse/seahorse-progress.glade: Progress operations now show up in 
    the task list properly. Fixes bug #445767
    
2007-08-20  Stef Walter  <stef@memberwebs.com>

    * data/seahorse.schemas.in: Hide agent try icon by default.
    Fixes bug #432891
    
2007-08-12  Stef Walter  <stef@memberwebs.com>

    * configure.in: Bump version

=== seahorse-2.19.90 ===

2007-08-12  Stef Walter  <stef@memberwebs.com>

    * configure.in:
    * NEWS:
    * README: Release 2.19.90

2007-08-12  Adam Schreiber  <sadam@clemson.edu>

    * MAINTAINERS: Changed format to match discussion on d-d-l

2007-07-16  Adam Schreiber  <sadam@clemson.edu>
    
    * help/C/seahorse.xml: Add documentation for changing the password
    on the default gnome-keyring key ring.  Patch by Milo Casagrande.
    Fixes bug #453043

2007-07-10  Adam Schreiber  <sadam@clemson.edu>
    
    * plugins/applet/seahorse-applet.c: Add word wrapping to window that
    displays text.

2007-07-07  Stef Walter  <stef@memberwebs.com>

   * configure.in: Bump version number
   
=== seahorse-2.19.5 ===

2007-07-07  Stef Walter  <stef@memberwebs.com>

    * NEWS:
    * README:
    * configure.in: Release 2.19.5
    
2007-07-07  Adam Schreiber  <sadam@clemson.edu>
    
    * agent/seahorse-agent-cache.c:
    * agent/seahorse-agent-ssh.c: When only using the ssh portion of 
    seahorse-agent, still init the cache.  Patch from Ted Percival.
    Fixes bug #454469

2007-06-24  Daniel Nylander <po@danielnylander.se>

	* plugins/applet/docs/sv/sv.po: Added Swedish translation