@@ -1,5 +1,11 @@
 2007-08-21  Stef Walter  <stef@memberwebs.com>
 
+    * agent/seahorse-agent-actions.c:
+    * agent/seahorse-agent-cache.c: Fix badly placed semi-colons which 
+    shortcircuit if()s. Patch by  Dave Jones. Fixes bug #467485
+    
+2007-08-21  Stef Walter  <stef@memberwebs.com>
+
     * src/seahorse-gkeyring-item.c: Properly escape any markup characters in 
     a gnome-keyring item name. Fixes bug #453188
     
